--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -1,6 +1,21 @@
 // Catering Page //
+img {
+  width: 100%;
+  height: auto;
+}
+
 // Section 1: Introduction AKA Header Info //
 .hm-intro {
+  background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke.jpg");
+  background-size: 50% auto;
+  background-position: 0 20%;
+  background-repeat: no-repeat;
+
+  .hm-intro__header-bg {
+    picture {
+      z-index: 100;
+    }
+  }
 }
 
 //
@@ -13,11 +28,25 @@
     font-size: 28px;
     line-height: 30px;
   }
+
+  .hm-partners__logo {
+    svg {
+      padding: 0 1em;
+    }
+  }
 }
 
 //
 // Section 3: About AKA HM Story
 .hm-about {
+  background-image: cloudinaryUrl("hookamonk.com/bg_story-smoke.jpg");
+  background-size: 50% auto;
+  background-position: 100% 0;
+  background-repeat: no-repeat;
+
+  .hm-about__text {
+    align-self: center;
+  }
 }
 
 //
@@ -39,7 +68,15 @@
     color: var(--hm-white);
 
     max-width: 740px;
-    margin: 1em auto 2em;
+    margin: 1em auto;
+  }
+
+  .hm-testimonials__logo {
+    margin-bottom: 3em;
+
+    svg {
+      padding: 0 1em;
+    }
   }
 
   .facts {
@@ -62,7 +99,6 @@
 
   .hm-warp__type {
     text-align: left;
-    background-color: var(--hm-grey--dark);
     padding: 4em 5em 6em;
     border-radius: 10px;
 
@@ -76,15 +112,24 @@
       font-weight: 700;
       line-height: 58px;
     }
+
     button {
       margin-top: 2em;
     }
   }
-  .hm-warp__type .hm-warp__type--b2b {
 
+  .hm-warp__type--b2b {
+    background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2b.jpg");
+    background-size: 100% auto;
+    background-position: 100% 0;
+    background-repeat: no-repeat;
   }
-  .hm-warp__type .hm-warp__type--b2c {
 
+  .hm-warp__type--b2c {
+    background-image: cloudinaryUrl("hookamonk.com/bg_warp-b2c.jpg");
+    background-size: 100% auto;
+    background-position: 100% 0;
+    background-repeat: no-repeat;
   }
 }
 
@@ -103,11 +148,13 @@
 
     .hm-product-type__link {
       padding-top: 1em;
+
       a {
         font-size: 18px;
         font-weight: 600;
         color: var(--hm-grey--dark);
         text-decoration: none;
+
         &:hover {
           cursor: pointer;
           color: var(--hm-orange);
@@ -120,7 +167,7 @@
   .hm-product-type__inner {
     flex-grow: 1;
     justify-content: space-between;
-    padding: 2em;
+    padding: 0.5em 2em 2em;
   }
 
   .hm-product-type, .hm-product-type__inner {
