PostCube - Jak box funguje: Změna textu v sekci 6

--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -526,9 +526,9 @@
                 </svg>
               </div>
               <h3>Chci PostCube v&nbsp;mém oblíbeném e-shopu</h3>
-              <p>Líbilo by se vám, kdyby byla PostCube mezi dopravními metodami v&nbsp;e-shopu,
-                kde často nakupujete? Napište nám, o&nbsp;který e-shop se jedná, a my se o&nbsp;to
-                postaráme.</p>
+              <p>Pokud ještě e-shop nemá PostCube integrovanou do svého systému, uveďte
+                způsob dopravy, telefonní číslo, které používáte i&nbsp;v&nbsp;aplikaci
+                PostCube, a <b>kurýrovi pošlete jednorázový odkaz pro otevření</b>.</p>
             </div>
           </div>
         </div>
