--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -88,22 +88,10 @@ a {
 }
 
 .button {
-  border-radius: 4px;
-
   a {
-    font-size: 18px;
     font-weight: 700;
     text-decoration: none;
   }
-
-  @media (min-width: 480px) {
-    padding: 12px 64px;
-  }
-  @media (max-width: 479px) {
-    width: 100%;
-    height: 54px;
-  }
-
   &:hover {
     cursor: pointer;
   }
@@ -111,6 +99,27 @@ a {
 
 .button__contained {
   border: none;
+  border-radius: 4px;
+  a {
+    font-size: 18px;
+  }
+  @media (min-width: 480px) {
+    padding: 12px 64px;
+  }
+  @media (max-width: 479px) {
+    width: 100%;
+    height: 54px;
+  }
+}
+
+.button__outlined {
+  background-color: var(--hm-white);
+  border: 2px solid var(--hm-orange);
+  a {
+    font-size: 16px;
+    color: var(--hm-orange);
+    text-transform: uppercase;
+  }
 }
 
 .button__contained--dark {
