--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -39,7 +39,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">Design anything, build everything</p>
-          <h1>Game changer in hookah world</h1>
+          <h1>Game <span class="text--orange">changer</span> in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco</p>
           <button class="button button__contained button__contained--dark">
             <a href="#about" class="button__label">Next</a>
