--- a/www.hookamonk.com/src/stylesheets/v2/header.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/header.scss
@@ -8,12 +8,19 @@
   border-bottom: 1px solid var(--hm-grey--lighter);
 }
 
-.tm-logo {
-  display: flex;
+.header__logo {
+  align-self: center;
+  @media (max-width: 839px) {
+    svg {
+      width: 124px;
+      height: auto;
+    }
+  }
 }
 
 .tm-hamburger {
-  text-align: end;
+  align-self: center;
+
   .tm-hamburger__container {
     display: inline-block;
     position: relative;
@@ -21,6 +28,16 @@
     height: 18px;
     cursor: pointer;
   }
+
+  span {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--hm-grey--dark);
+    text-transform: uppercase;
+    margin: 0.5em 1em;
+  }
+
   .tm-hamburger__bar {
     background-color: var(--hm-grey--dark);
     width: 20px;
@@ -28,14 +45,18 @@
     position: absolute;
     top: 16px;
     transition: transform 0.4s;
+
     &:first-of-type {
       transform: translateY(-6px);
     }
+
     &:last-of-type {
       transform: translateY(6px);
     }
   }
+
   .tm-hamburger__container--open {
+    z-index: 2;
     .tm-hamburger__bar:first-of-type {
       transform: rotate(-45deg);
     }
@@ -52,47 +73,93 @@
 
 .tm-app-bar.tm-app-bar--open {
   color: var(--hm-white);
+
   .tm-hamburger__container::after {
     color: rgba(255, 255, 255, 0.5);
   }
+
   .tm-hamburger__bar {
     background-color: var(--hm-white);
   }
+
   .hm-logo svg {
     fill: var(--hm-white);
   }
+
   .tm-menu {
     transform: translate(-16px, -90px);
-    z-index: -1;
+    z-index: 1;
   }
 }
 
 .tm-menu {
-    width: 100vw;
-    height: 100vh;
-    padding-top: 64px;
-    transform: translate(calc(-140vw - 12px), 0);
-    position: fixed;
-    z-index: 3;
-    transition: transform 0.3s;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: #fff;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 64px;
+  transform: translate(calc(-140vw - 12px), 0);
+  position: fixed;
+  z-index: 3;
+  transition: transform 0.3s;
+  overflow: hidden;
+  background-color: var(--hm-grey--dark);
+  color: var(--hm-white);
 
-    .tm-menu__list li {
-      margin: 0 24px;
+  .tm-menu__list li {
+    margin: 0 24px;
+  }
+
+  .tm-menu__list a {
+    display: block;
+    padding: 12px;
+    margin: 4px;
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
     }
-    .tm-menu__list li + li {
-      border-top: 1px solid rgba(255, 255, 255, 0.25);
+  }
+}
+
+.header__content {
+  display: flex;
+  justify-content: flex-end;
+
+  .header__content--social-pc {
+    display: contents;
+    @media (max-width: 839px) {
+      display: none;
     }
-    .tm-menu__list a {
-      display: block;
-      padding: 12px;
-      margin: 4px;
-      color: #fff;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
+  }
+  .material-icons {
+    padding: 20px 10px;
+    svg {
+      width: 20px;
+      height: 20px;
+
+      path {
+        fill: var(--hm-black);
       }
     }
+  }
+
+  .button__outlined {
+    margin: 0 2em;
+  }
+}
+
+.header__content--social-phone {
+  margin-left: 4em;
+  svg {
+    padding: 0 0.5em 1em;
+    path {
+      fill: var(--hm-white);
+    }
+  }
+  @media (max-width: 839px) {
+    .button__outlined {
+      width: 164px;
+      height: 56px;
+    }
+  }
 }
