--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -95,6 +95,10 @@ a {
   &:hover {
     cursor: pointer;
   }
+  @media (max-width: 479px) {
+    width: 100%;
+    height: 54px;
+  }
 }
 
 .button__contained {
@@ -106,10 +110,6 @@ a {
   @media (min-width: 480px) {
     padding: 12px 64px;
   }
-  @media (max-width: 479px) {
-    width: 100%;
-    height: 54px;
-  }
 }
 
 .button__outlined {
@@ -119,6 +119,9 @@ a {
     font-size: 16px;
     color: var(--hm-orange);
     text-transform: uppercase;
+  }
+  @media screen and (min-width: 840px) {
+    padding: 18px 48px;
   }
 }
 
@@ -159,4 +162,8 @@ a {
     background-color: var(--hm-orange--light);
     transition: all 0.8s;
   }
+}
+
+.text--orange {
+  color: var(--hm-orange);
 }
