Hookamonk V2 - Solving lighthouse issues

--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -32,6 +32,7 @@
         <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
+               width="530px"
                src="{{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530) }}"
                srcset="{{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530) }} 1x,
                      {{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
@@ -57,7 +58,7 @@
           <h2>These companies partnered with us to drive growth</h2>
         </div>
         <div class="hm-partners__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="http://www.loftn8.com/" title="Loft N8 Homepage" target="_blank">
+          <a href="http://www.loftn8.com/" title="Loft N8 Homepage" target="_blank" rel="noopener">
             <svg width="77" height="58" viewBox="0 0 77 58" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Loft N8 Logo</title>
               <g opacity="0.43">
@@ -97,7 +98,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://www.topmonks.com/index.html" title="TopMonks Homepage" target="_blank">
+          <a href="https://www.topmonks.com/index.html" title="TopMonks Homepage" target="_blank" rel="noopener">
             <svg width="181" height="68" viewBox="0 0 181 41" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>TopMonks Logo</title>
               <g opacity="0.43">
@@ -156,7 +157,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Products Eshop" target="_blank">
+          <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Products Eshop" target="_blank" rel="noopener">
             <svg width="83" height="68" viewBox="0 0 83 68" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Nebulla Logo</title>
               <g opacity="0.43">
@@ -270,6 +271,7 @@
         <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
+               width="530px"
                src="{{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530) }}"
                srcset="{{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530) }} 1x,
                      {{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
@@ -440,7 +442,7 @@
             and continually works to improve their product.”</p>
         </div>
         <div class="hm-testimonials__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="http://www.loftn8.com/" title="Loft N8 Homepage" target="_blank">
+          <a href="http://www.loftn8.com/" title="Loft N8 Homepage" target="_blank" rel="noopener">
             <svg width="77" height="58" viewBox="0 0 77 58" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.43">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -479,7 +481,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://www.topmonks.com/index.html" title="TopMonks Homepage" target="_blank">
+          <a href="https://www.topmonks.com/index.html" title="TopMonks Homepage" target="_blank" rel="noopener">
             <svg width="181" height="68" viewBox="0 0 181 41" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.43">
                 <path
@@ -537,7 +539,7 @@
               </g>
             </svg>
           </a>
-          <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Products Eshop" target="_blank">
+          <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Products Eshop" target="_blank" rel="noopener">
             <svg width="83" height="68" viewBox="0 0 83 68" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.43">
                 <path
@@ -730,6 +732,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
+               width="530px"
                src="{{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530) }}"
                srcset="{{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530) }} 1x,
                      {{ "/hookamonk.com/img_catering.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
