--- a/www.hookamonk.com/src/html/components/header2.njk
+++ b/www.hookamonk.com/src/html/components/header2.njk
@@ -419,14 +419,14 @@
         class="header__content mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <div
           class="header__content--social-pc mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-          <a href="https://www.facebook.com/hookamonk/" class="material-icons" title="Facebook Logo" target="_blank">
+          <a href="https://www.facebook.com/hookamonk/" class="material-icons" title="Facebook Logo" target="_blank" rel="noopener">
             <svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M7 9H5V18H2V9H0V6H2V4C2 2.53 1.708 0 5 0H8V3H6C5.45348 3.01368 5.01368 3.45348 5 4V6H8L7 9Z"
                     fill="#000"/>
             </svg>
           </a>
           <a href="https://www.instagram.com/hookamonk/" class="material-icons" title="Instagram Logo"
-             target="_blank">
+             target="_blank" rel="noopener">
             <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M6 0H15C18.3137 0 21 2.68629 21 6V15C21 18.3137 18.3137 21 15 21H6C2.68629 21 0 18.3137 0 15V6C0 2.68629 2.68629 0 6 0ZM6 2H15C17.2091 2 19 3.79086 19 6V15C19 17.2091 17.2091 19 15 19H6C3.79086 19 2 17.2091 2 15V6C2 3.79086 3.79086 2 6 2ZM16 10.5C16 7.46243 13.5376 5 10.5 5C7.50628 5.10332 5.10332 7.50628 5 10.5C5 13.5376 7.46243 16 10.5 16C13.5376 16 16 13.5376 16 10.5ZM10.58 7C11.4874 6.99947 12.3578 7.35956 12.9996 8.00099C13.6414 8.64242 14.002 9.51261 14.002 10.42C13.947 12.3648 12.3819 13.9277 10.437 13.98C9.52971 13.9805 8.6594 13.6204 8.01776 12.979C7.37611 12.3375 7.01573 11.4673 7.016 10.56C7.07151 8.61578 8.63572 7.05332 10.58 7ZM17 5C17 4.44772 16.5523 4 16 4C15.4477 4 15 4.44772 15 5C15 5.55228 15.4477 6 16 6C16.5523 6 17 5.55228 17 5Z"
@@ -454,14 +454,14 @@
       <li><a href="/catering">I want it for my lounge</a></li>
     </ul>
     <div class="header__content--social-phone">
-      <a href="https://www.facebook.com/hookamonk/" class="material-icons" title="Facebook Logo" target="_blank">
+      <a href="https://www.facebook.com/hookamonk/" class="material-icons" title="Facebook Logo" target="_blank" rel="noopener">
         <svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7 9H5V18H2V9H0V6H2V4C2 2.53 1.708 0 5 0H8V3H6C5.45348 3.01368 5.01368 3.45348 5 4V6H8L7 9Z"
                 fill="#000"/>
         </svg>
       </a>
       <a href="https://www.instagram.com/hookamonk/" class="material-icons" title="Instagram Logo"
-         target="_blank">
+         target="_blank" rel="noopener">
         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M6 0H15C18.3137 0 21 2.68629 21 6V15C21 18.3137 18.3137 21 15 21H6C2.68629 21 0 18.3137 0 15V6C0 2.68629 2.68629 0 6 0ZM6 2H15C17.2091 2 19 3.79086 19 6V15C19 17.2091 17.2091 19 15 19H6C3.79086 19 2 17.2091 2 15V6C2 3.79086 3.79086 2 6 2ZM16 10.5C16 7.46243 13.5376 5 10.5 5C7.50628 5.10332 5.10332 7.50628 5 10.5C5 13.5376 7.46243 16 10.5 16C13.5376 16 16 13.5376 16 10.5ZM10.58 7C11.4874 6.99947 12.3578 7.35956 12.9996 8.00099C13.6414 8.64242 14.002 9.51261 14.002 10.42C13.947 12.3648 12.3819 13.9277 10.437 13.98C9.52971 13.9805 8.6594 13.6204 8.01776 12.979C7.37611 12.3375 7.01573 11.4673 7.016 10.56C7.07151 8.61578 8.63572 7.05332 10.58 7ZM17 5C17 4.44772 16.5523 4 16 4C15.4477 4 15 4.44772 15 5C15 5.55228 15.4477 6 16 6C16.5523 6 17 5.55228 17 5Z"
