Hookamonk V2 - Stylizace <ul> ve footer

--- a/www.hookamonk.com/src/html/v2/footer.njk
+++ b/www.hookamonk.com/src/html/v2/footer.njk
@@ -1,6 +1,6 @@
 <section class="footer">
   <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
+    <div class="mdc-layout-grid__inner hm-layout-wrapper">
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
         <ul>
           <li><a href="#about">Hookamonk story</a></li>
@@ -19,8 +19,7 @@
           <li><a href="#products">Accesories</a></li>
         </ul>
       </div>
-      <div
-        class="footer__contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
+      <div class="footer__contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
         <div class="footer__contact--name">
           <span itemprop="legalName"><b>Hookamonk s.r.o.</b></span>
           <p>If you want hookamonk for your place please contact us on email:<a href="mailto:sales@hookamonk.com">
