--- a/www.hookamonk.com/src/stylesheets/v2/footer.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/footer.scss
@@ -1,5 +1,9 @@
 .footer {
   border-top: 1px solid #E0E0E0;
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
   span, p, a {
     font-size: 16px;
     line-height: 34px;
