--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -32,11 +32,11 @@
         <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
-               width="530px"
-               src="{{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530) }}"
-               srcset="{{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_header.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+               width="600px"
+               src="{{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_header1.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">Design anything, build everything</p>
@@ -254,28 +254,37 @@
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <div class="material-icons material-icons--green">
+                <svg viewBox="0 0 24 24">
+              <path fill="currentColor"
+                    d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13"/>
+            </svg>
               </div>
-              <h3>Fringilla ipsum tincidunt</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque eu.</p>
+              <h3>Always on the go</h3>
+              <p>Looking for new challenges, our team of curious and passionate hookarians did it again!</p>
+              <p>Our goal was to bring the first working electronic hookah to the market. And finally we have done it! We are happy to announce our proud creation: WARP!</p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <div class="material-icons material-icons--orange">
+              <svg viewBox="0 0 24 24">
+              <path fill="currentColor"
+                    d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13"/>
+            </svg>
               </div>
-              <h3>Fringilla ipsum tincidunt</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque eu.</p>
+              <h3>The original motivation</h3>
+              <p>Behind this was our own frustration over the messy-complication of using traditional charcoal as a source of heat.</p>
+              <p>We wanted to revolutionise the hookah-smoking world, and bring it in line with modern technology.</p>
+              <p>We are not the first to try this, many have and failed, but we are the first to succeed and bring our innovation to the global markets.</p>
             </div>
           </div>
         </div>
         <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
-               width="530px"
-               src="{{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530) }}"
-               srcset="{{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_story.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+               width="600px"
+               src="{{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_story1.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
       </div>
     </div>
