--- a/www.hookamonk.com/src/stylesheets/v2/header.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/header.scss
@@ -1,5 +1,6 @@
 .tm-app-bar {
   background-color: var(--hm-white);
+  background-image: cloudinaryUrl("hookamonk.com/bg_header-dark.jpg");
   position: absolute;
   width: 100vw;
   z-index: 1000;
