--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -453,7 +453,7 @@
           <h4>Fixed monthly fee, transparent pricing, no hidden charges</h4>
           <p>2 weeks trial free of charge<br>
              For personal use only</p>
-          <button class="button button__contained button__contained--green">
+          <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
@@ -462,7 +462,7 @@
           <h4>No initial down payments</h4>
           <p>Monthly payments based on the number of Warp sessions served<br>
              We earn when you earn, we earn when you have customers enjoying Warp session at your place (A win-win-win situation!)</p>
-          <button class="button button__contained button__contained--orange">
+          <button class="button button__contained button__contained--white">
             <a href="#" class="button__label">Next</a>
           </button>
         </div>
@@ -751,19 +751,17 @@
           <p class="title__prefix">Design anything, build everything</p>
           <h2>Hookah catering</h2>
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-              <div class="material-icons material-icons--green">
-              </div>
-              <h3>Fringilla ipsum tincidunt</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque eu.</p>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+              <h3>Premium hookah catering</h3>
+              <p>For various occasions (celebrations, garden parties, weddings, corporate or business events, festivals).</p>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-              <div class="material-icons material-icons--orange">
-              </div>
-              <h3>Fringilla ipsum tincidunt</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-                vestibulum scelerisque eu.</p>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+              <h3>Our professional team</h3>
+              <p>Will provide you with premium service and an extraordinary experience throughout your events.</p>
+            </div>
+             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+              <h3>Hookahs create opportunities</h3>
+              <p>For relaxation, socialization, networking, meditating or brainstorming.Our passion and devotion to hookahs bring a new culture and experiences during your social gatherings.</p>
             </div>
           </div>
         </div>
