--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -15,8 +15,7 @@
 
 // Section 1: Introduction AKA Header Info //
 .hm-intro {
-  /*background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke.jpg");*/
-  background-image: cloudinaryUrl("hookamonk.com/bg_header-dark.jpg");
+  background-image: cloudinaryUrl("hookamonk.com/bg_header-smoke.jpg");
   background-size: 50% auto;
   background-position: 0 20%;
   background-repeat: no-repeat;
