[www.topmonks.cz] Updated jobs page wording

--- a/www.topmonks.cz/src/html/volna-mista/index.njk
+++ b/www.topmonks.cz/src/html/volna-mista/index.njk
@@ -20,10 +20,11 @@
     <div class="box jobs_positions mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Otevřené pozice</h3>
       <div class="hire-jobs">
-        <p>Stále hledáme nadšené lidi s výtečnými (nejen) technickými dovednostmi.
-          Nemůžeme vám slíbit konkrétní aktuální technologie, protože ty přicházejí
-          a odcházejí, ale zajímavé a náročné projekty, se zákazníky, kteří nás 
-          respektují a nás to s nimi baví.</p>
+        <p>Stále hledáme nadšené lidi s&nbsp;výtečnými (nejen) technickými
+          dovednostmi. Nemůžeme vám slíbit konkrétní aktuální technologie. Ty
+          přicházejí a odcházejí. Můžeme slíbit zajímavé a náročné projekty
+          se zákazníky, kteří respektují náš způsob práce a expertizu.
+          Zákazníky, se kterými nás spolupráce&nbsp;baví.</p>
         </div>
     </div>
   </div>
